# pyxplod

./: .cursorrules  BUILD.md  CHANGELOG.md  CLAUDE.md  LLM.txt  PLAN.md  README.md  REFACTOR_FILELIST.txt  REFACTOR_SPLITTING.md  TODO.md  llms.txt  pyproject.toml  test_unicode.py
.claude/: settings.local.json
.cursor/rules/: frame-fingerprinting-algorithm.mdc  spatial-alignment-algorithm.mdc  temporal-alignment-dtw.mdc  video-processing-pipeline.mdc
.giga/: specifications.json
.github/workflows/: ci.yml  push.yml  release.yml
scripts/: build-binary.sh  build.sh  release.sh  test.sh
src-dirs/pyxplod/: __init__.py
src-dirs/pyxplod/__version__/: __init__.py
src-dirs/pyxplod/pyxplod/: __init__.py  analyze_name_usage.py  extract_imports.py  find_definitions.py  process_python_file.py  process_python_file_dirs.py
src-files/pyxplod/: pyxplod.py  pyxplod_create_import_statement.py  pyxplod_filter_imports_for_names.py  pyxplod_find_python_files.py  pyxplod_generate_filename.py  pyxplod_main.py  pyxplod_process_python_file_dirs.py  pyxplod_to_snake_case.py  pyxplod_validate_paths.py  pyxplod_write_extracted_file.py
src/pyxplod/: __init__.py  __main__.py  ast_utils.py  cli.py  file_utils.py  processors.py  pyxplod.py  utils.py
src/pyxplod/processors/: __init__.py  process_dirs_method.py  process_file_method.py
tests/: test_benchmark.py  test_cli.py  test_integration.py  test_package.py  test_pyxplod.py
